fix(aria.css): :ambulance: Fix comic mono never being served from website
I messed up the format so it went to pull the file grom github instead of the server, oops

--- a/src/styles/aria.css
+++ b/src/styles/aria.css
@@ -15,7 +15,8 @@
 
 @font-face {
 	font-family: "Comic Mono";
-	src: local("Comic Mono"), url("/static/fonts/ComicMono.ttf") format("truetype"),
+	src: local("Comic Mono"), url("/static/fonts/ComicMono.ttf")
+		format("truetype"),
 		url("https://dtinth.github.io/comic-mono-font/ComicMono.ttf")
 		format("truetype");
 }
